[package]
name = "joy_todo_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
derive-new = "0.5.9"
typed-builder = "0.15.0"
getset = "0.1.2"


[lib]
crate-type = ["staticlib", "cdylib"]
